# AgenticRAG

./: .env.example  .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  webapp.py
agenticRAG/: agentic_answer.py  agentic_config.py  agentic_nodes.py  agentic_runtime.py  agentic_schema.py  cli_utils.py  instant_answer.py  instant_nodes.py  instant_schema.py  query_utils.py  short_memory.py
data/: web_chats.json
docs/: AgenticRAG_Chat_产品说明书_当前版.html  problem_tutoring_module_report.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
models/: auto.py  deep_search.py  instant.py
script/: build_and_run.sh
scripts/: build_question_bank_embeddings.py
templates/: chat.html
tests/: test_agentic_answer.py  test_agentic_planning.py  test_chat_auto_orchestration.py  test_chat_code_analysis.py  test_chat_retrieval_support.py  test_chat_routing.py  test_chat_streaming.py  test_code_analysis_service.py  test_graph_service.py  test_problem_tutoring_evaluation.py  test_problem_tutoring_service.py  test_session_store.py  test_tutoring_question_bank.py  test_webapp_code_analysis_stream.py  test_webapp_factory.py
utils/: evaluate_problem_tutoring.py  extract_os_figures.py  generate_tutoring_question_bank.py  graph_visual_with_neo4j.py  index.py  index2.py  index3.py  knowledge_graph.html  prepare_operating_systems_for_index.py  rebuild_operating_systems_from_pdf.py
webapp_core/: __init__.py  async_runner.py  auto_runtime.py  chat_auto_orchestration.py  chat_code_analysis.py  chat_routing.py  (+8 more)
(+17 files in other folders)
